# notihub

./: Cargo.toml  README.md
src/: config.rs  events.rs  hub.rs  main.rs  module.rs  notification.rs  notifier.rs
src/modules/: device.rs  mod.rs  network.rs  power.rs  power_supply.rs
src/modules/device/: device.rs  mod.rs  notification.rs
src/modules/network/: mod.rs  network.rs  notification.rs
src/modules/power/: mod.rs  notification.rs  power_supply.rs
src/utils/: make_notification.rs  mod.rs  with_logs.rs
