[package]
name = "notihub"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.158"
libpulse-binding = "2.28.1"
pipewire = "0.8.0"
tokio-udev = "0.9.1"
futures-util = "0.3.30"
derive_more = { version = "1.0.0", features = ["display"] }
anyhow = "1.0.95"
zbus = "5.2.0"
tokio = {version = "1.42.0", features = ["full"]}
log = "0.4.22"
notify-rust = "4.11.3"
