[package]
name = "notihub"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
anyhow = "1.0.95"
zbus = { version = "5.2.0", features = ["blocking-api"] }
log = "0.4.22"
notify-rust = "4.11.3"
env_logger = "0.11.6"
udev = "0.9.1"
tokio = { version = "1.42.0", features = ["rt", "sync"] }
futures-util = "0.3.31"
